--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,41 +1,5 @@
 flask
 flask-cors
-pandas
-scikit-learn
-nltk
-joblib
-PyPDF2
-python-docx
-google-generativeai
-python-dotenv
-Flask-SQLAlchemy
-Flask-Login
-Flask-Bcrypt
-reportlab
-sentence-transformers
-torch
-transformers
-accelerate
-bitsandbytes
-matplotlib
-authlib
-pyopenssl
-json-repair
-fpdf2
-flask_cors
-flask_sqlalchemy
-flask_login
-flask_bcrypt
-dotenv
-PyPDF2
-docx
-reportlab
-sentence_transformers
-json-repair
-nltk
-google
-flask
-flask-cors
 flask-sqlalchemy
 flask-bcrypt
 flask-login
@@ -43,8 +7,8 @@ python-dotenv
 PyPDF2
 python-docx
 reportlab
-sentence-transformers
 json-repair
 openai
 gunicorn
 psycopg2-binary
+requests
